fix date alignment

--- a/app/routes/chats.$chatId.css
+++ b/app/routes/chats.$chatId.css
@@ -221,4 +221,5 @@
   font-weight: 700;
   margin-left: auto;
   color: var(--colors-teal-800);
+  margin-right: 0;
 }
